// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSideNavItem can be disabled 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <button
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
    disabled=""
    type="button"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
      title="Children"
    >
      Children
    </span>
  </button>
</div>
`;

exports[`EuiSideNavItem can be emphasized 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root euiSideNavItem--emphasized emotion-euiSideNavItem-root-emphasized"
>
  <div
    class="euiSideNavItemButton emotion-euiSideNavItemButton-emphasized-root"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
      title="Children"
    >
      Children
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem can have truncation turned off 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <div
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
  >
    <span
      class="euiSideNavItemButton__label emotion-euiSideNavItemButton__label"
    >
      Children
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem href is rendered 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <a
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
    href="#"
    rel="noreferrer"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
    >
      <button />
    </span>
  </a>
</div>
`;

exports[`EuiSideNavItem href is rendered with rel 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <a
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
    href="#"
    rel="noopener noreferrer"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
    >
      <button />
    </span>
  </a>
</div>
`;

exports[`EuiSideNavItem is rendered 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <div
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
    >
      <button
        aria-label="aria-label"
        class="testClass1 testClass2 emotion-euiTestCss"
        data-test-subj="test subject string"
      />
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem isSelected defaults to false 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <div
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
    >
      <button />
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem isSelected is rendered when specified as true 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <div
    class="euiSideNavItemButton euiSideNavItemButton-isSelected emotion-euiSideNavItemButton-selected-root"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
    >
      <button />
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem preserves child's classes 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root emotion-euiSideNavItem-root"
>
  <div
    class="euiSideNavItemButton emotion-euiSideNavItemButton-root"
  >
    <span
      class="euiSideNavItemButton__label eui-textTruncate emotion-euiSideNavItemButton__label"
    >
      <button
        class="test"
      />
    </span>
  </div>
</div>
`;
